# CareGraph

./: .env.example  .gitignore  NEO4J_ARCHITECTURE.md  PUBLIC_DEMO.md  README.md  REQUIREMENTS.md  main.py  pyproject.toml  render.yaml
.devcontainer/: devcontainer.json
.github/: SETUP_SECRETS.md
.github/workflows/: neo4j-smoke.yml
app/: config.py  graph_db.py  security.py
app/crew/: agents.py  care_crew.py  tasks.py  tools.py
app/models/: senior.py
app/routers/: alerts.py  checkins.py  crew.py  graph.py  seniors.py  voice.py
app/services/: alert_engine.py  bland_voice.py  call_analyzer.py  gmi_inference.py  rocketride.py
data/: SAMPLE_DATA_SUMMARY.md  ehr_all_patients.json  ehr_parsed_patients.json
frontend/: app.js  index.html  landing.html  style.css
outputs/: README.md  checkin_analysis.json  condition_suggestion.json  drug_interaction.json  final_care_plan.json
pipelines/: care_recommendation.pipe  checkin_analysis.pipe  condition_suggestion.pipe  drug_interaction.pipe  neo4j_graph_chat.pipe
presentation/: DEMO_SCRIPT.md
scripts/: dedupe_alerts.py  seed_data.py  seed_doctors.py
tests/: test_alert_engine.py  test_call_analyzer.py  test_config.py  test_integration.py  test_models.py  test_rocketride.py  test_wellness_api.py
