[project]
name = "caregraph"
version = "1.0.0"
description = "Graph-powered senior care with Neo4j + RocketRide AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "httpx",
    "pydantic-settings",
    "neo4j",
    "apscheduler>=3.10,<4",
    "crewai>=1.12.2",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
